// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense From with expense data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div>
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value="rent"
      />
    </div>
    <div>
      <input
        onChange={[Function]}
        placeholder="Amount"
        type="text"
        value="1"
      />
    </div>
    <div>
      <withStyles(SingleDatePicker)
        anchorDirection="left"
        appendToBody={false}
        block={false}
        calendarInfoPosition="bottom"
        customCloseIcon={null}
        customInputIcon={null}
        date={"1995-12-17T06:24:00.000Z"}
        daySize={39}
        disableScroll={false}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        id="date"
        initialVisibleMonth={null}
        inputIconPosition="before"
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepFocusOnInput={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        noBorder={false}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        openDirection="down"
        orientation="horizontal"
        phrases={
          Object {
            "calendarLabel": "Calendar",
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsSelected": [Function],
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month.",
            "jumpToPrevMonth": "Move backward to switch to the previous month.",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
            "moveFocusByOneMonth": "Switch months.",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
            "openThisPanel": "Open this panel.",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field.",
            "selectFocusedDate": "Select the date in focus.",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        regular={false}
        renderCalendarInfo={null}
        renderDayContents={null}
        renderMonth={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        small={false}
        verticalHeight={null}
        verticalSpacing={22}
        weekDayFormat="dd"
        withFullScreenPortal={false}
        withPortal={false}
      />
    </div>
    <div>
      <textarea
        onChange={[Function]}
        placeholder="Add note for your expense (optional)"
        value=""
      />
    </div>
    <button
      type="submit"
    />
  </form>
</div>
`;

exports[`should render ExpenseForm correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div>
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value=""
      />
    </div>
    <div>
      <input
        onChange={[Function]}
        placeholder="Amount"
        type="text"
        value=""
      />
    </div>
    <div>
      <withStyles(SingleDatePicker)
        anchorDirection="left"
        appendToBody={false}
        block={false}
        calendarInfoPosition="bottom"
        customCloseIcon={null}
        customInputIcon={null}
        date={"1970-01-01T00:00:00.000Z"}
        daySize={39}
        disableScroll={false}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        id="date"
        initialVisibleMonth={null}
        inputIconPosition="before"
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepFocusOnInput={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        noBorder={false}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        openDirection="down"
        orientation="horizontal"
        phrases={
          Object {
            "calendarLabel": "Calendar",
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsSelected": [Function],
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month.",
            "jumpToPrevMonth": "Move backward to switch to the previous month.",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
            "moveFocusByOneMonth": "Switch months.",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
            "openThisPanel": "Open this panel.",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field.",
            "selectFocusedDate": "Select the date in focus.",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        regular={false}
        renderCalendarInfo={null}
        renderDayContents={null}
        renderMonth={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        small={false}
        verticalHeight={null}
        verticalSpacing={22}
        weekDayFormat="dd"
        withFullScreenPortal={false}
        withPortal={false}
      />
    </div>
    <div>
      <textarea
        onChange={[Function]}
        placeholder="Add note for your expense (optional)"
        value=""
      />
    </div>
    <button
      type="submit"
    />
  </form>
</div>
`;

exports[`should render erro for invalid submission 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseForm
    expense={
      Object {
        "createdAt": 1995-12-17T06:24:00.000Z,
        "description": "rent",
        "id": 1,
        "note": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p>
          Please provide description and amount.
        </p>,
        <form
          onSubmit={[Function]}
        >
          <div>
            <input
              autoFocus={true}
              onChange={[Function]}
              placeholder="Description"
              type="text"
              value="rent"
            />
          </div>
          <div>
            <input
              onChange={[Function]}
              placeholder="Amount"
              type="text"
              value=""
            />
          </div>
          <div>
            <withStyles(SingleDatePicker)
              anchorDirection="left"
              appendToBody={false}
              block={false}
              calendarInfoPosition="bottom"
              customCloseIcon={null}
              customInputIcon={null}
              date={"1995-12-17T06:24:00.000Z"}
              daySize={39}
              disableScroll={false}
              disabled={false}
              displayFormat={[Function]}
              enableOutsideDays={false}
              firstDayOfWeek={null}
              focused={false}
              hideKeyboardShortcutsPanel={false}
              horizontalMargin={0}
              id="date"
              initialVisibleMonth={null}
              inputIconPosition="before"
              isDayBlocked={[Function]}
              isDayHighlighted={[Function]}
              isOutsideRange={[Function]}
              isRTL={false}
              keepFocusOnInput={false}
              keepOpenOnDateSelect={false}
              monthFormat="MMMM YYYY"
              navNext={null}
              navPrev={null}
              noBorder={false}
              numberOfMonths={1}
              onClose={[Function]}
              onDateChange={[Function]}
              onFocusChange={[Function]}
              onNextMonthClick={[Function]}
              onPrevMonthClick={[Function]}
              openDirection="down"
              orientation="horizontal"
              phrases={
                Object {
                  "calendarLabel": "Calendar",
                  "chooseAvailableDate": [Function],
                  "clearDate": "Clear Date",
                  "closeDatePicker": "Close",
                  "dateIsSelected": [Function],
                  "dateIsUnavailable": [Function],
                  "enterKey": "Enter key",
                  "escape": "Escape key",
                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                  "homeEnd": "Home and end keys",
                  "jumpToNextMonth": "Move forward to switch to the next month.",
                  "jumpToPrevMonth": "Move backward to switch to the previous month.",
                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                  "keyboardShortcuts": "Keyboard Shortcuts",
                  "leftArrowRightArrow": "Right and left arrow keys",
                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                  "moveFocusByOneMonth": "Switch months.",
                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                  "openThisPanel": "Open this panel.",
                  "pageUpPageDown": "page up and page down keys",
                  "questionMark": "Question mark",
                  "returnFocusToInput": "Return to the date input field.",
                  "selectFocusedDate": "Select the date in focus.",
                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                  "upArrowDownArrow": "up and down arrow keys",
                }
              }
              placeholder="Date"
              readOnly={false}
              regular={false}
              renderCalendarInfo={null}
              renderDayContents={null}
              renderMonth={null}
              reopenPickerOnClearDate={false}
              required={false}
              screenReaderInputMessage=""
              showClearDate={false}
              showDefaultInputIcon={false}
              small={false}
              verticalHeight={null}
              verticalSpacing={22}
              weekDayFormat="dd"
              withFullScreenPortal={false}
              withPortal={false}
            />
          </div>
          <div>
            <textarea
              onChange={[Function]}
              placeholder="Add note for your expense (optional)"
              value=""
            />
          </div>
          <button
            type="submit"
          />
        </form>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Please provide description and amount.",
        },
        "ref": null,
        "rendered": "Please provide description and amount.",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <input
                autoFocus={true}
                onChange={[Function]}
                placeholder="Description"
                type="text"
                value="rent"
              />
            </div>,
            <div>
              <input
                onChange={[Function]}
                placeholder="Amount"
                type="text"
                value=""
              />
            </div>,
            <div>
              <withStyles(SingleDatePicker)
                anchorDirection="left"
                appendToBody={false}
                block={false}
                calendarInfoPosition="bottom"
                customCloseIcon={null}
                customInputIcon={null}
                date={"1995-12-17T06:24:00.000Z"}
                daySize={39}
                disableScroll={false}
                disabled={false}
                displayFormat={[Function]}
                enableOutsideDays={false}
                firstDayOfWeek={null}
                focused={false}
                hideKeyboardShortcutsPanel={false}
                horizontalMargin={0}
                id="date"
                initialVisibleMonth={null}
                inputIconPosition="before"
                isDayBlocked={[Function]}
                isDayHighlighted={[Function]}
                isOutsideRange={[Function]}
                isRTL={false}
                keepFocusOnInput={false}
                keepOpenOnDateSelect={false}
                monthFormat="MMMM YYYY"
                navNext={null}
                navPrev={null}
                noBorder={false}
                numberOfMonths={1}
                onClose={[Function]}
                onDateChange={[Function]}
                onFocusChange={[Function]}
                onNextMonthClick={[Function]}
                onPrevMonthClick={[Function]}
                openDirection="down"
                orientation="horizontal"
                phrases={
                  Object {
                    "calendarLabel": "Calendar",
                    "chooseAvailableDate": [Function],
                    "clearDate": "Clear Date",
                    "closeDatePicker": "Close",
                    "dateIsSelected": [Function],
                    "dateIsUnavailable": [Function],
                    "enterKey": "Enter key",
                    "escape": "Escape key",
                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                    "homeEnd": "Home and end keys",
                    "jumpToNextMonth": "Move forward to switch to the next month.",
                    "jumpToPrevMonth": "Move backward to switch to the previous month.",
                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                    "keyboardShortcuts": "Keyboard Shortcuts",
                    "leftArrowRightArrow": "Right and left arrow keys",
                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                    "moveFocusByOneMonth": "Switch months.",
                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                    "openThisPanel": "Open this panel.",
                    "pageUpPageDown": "page up and page down keys",
                    "questionMark": "Question mark",
                    "returnFocusToInput": "Return to the date input field.",
                    "selectFocusedDate": "Select the date in focus.",
                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                    "upArrowDownArrow": "up and down arrow keys",
                  }
                }
                placeholder="Date"
                readOnly={false}
                regular={false}
                renderCalendarInfo={null}
                renderDayContents={null}
                renderMonth={null}
                reopenPickerOnClearDate={false}
                required={false}
                screenReaderInputMessage=""
                showClearDate={false}
                showDefaultInputIcon={false}
                small={false}
                verticalHeight={null}
                verticalSpacing={22}
                weekDayFormat="dd"
                withFullScreenPortal={false}
                withPortal={false}
              />
            </div>,
            <div>
              <textarea
                onChange={[Function]}
                placeholder="Add note for your expense (optional)"
                value=""
              />
            </div>,
            <button
              type="submit"
            />,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <input
                autoFocus={true}
                onChange={[Function]}
                placeholder="Description"
                type="text"
                value="rent"
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "autoFocus": true,
                "onChange": [Function],
                "placeholder": "Description",
                "type": "text",
                "value": "rent",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <input
                onChange={[Function]}
                placeholder="Amount"
                type="text"
                value=""
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "onChange": [Function],
                "placeholder": "Amount",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <withStyles(SingleDatePicker)
                anchorDirection="left"
                appendToBody={false}
                block={false}
                calendarInfoPosition="bottom"
                customCloseIcon={null}
                customInputIcon={null}
                date={"1995-12-17T06:24:00.000Z"}
                daySize={39}
                disableScroll={false}
                disabled={false}
                displayFormat={[Function]}
                enableOutsideDays={false}
                firstDayOfWeek={null}
                focused={false}
                hideKeyboardShortcutsPanel={false}
                horizontalMargin={0}
                id="date"
                initialVisibleMonth={null}
                inputIconPosition="before"
                isDayBlocked={[Function]}
                isDayHighlighted={[Function]}
                isOutsideRange={[Function]}
                isRTL={false}
                keepFocusOnInput={false}
                keepOpenOnDateSelect={false}
                monthFormat="MMMM YYYY"
                navNext={null}
                navPrev={null}
                noBorder={false}
                numberOfMonths={1}
                onClose={[Function]}
                onDateChange={[Function]}
                onFocusChange={[Function]}
                onNextMonthClick={[Function]}
                onPrevMonthClick={[Function]}
                openDirection="down"
                orientation="horizontal"
                phrases={
                  Object {
                    "calendarLabel": "Calendar",
                    "chooseAvailableDate": [Function],
                    "clearDate": "Clear Date",
                    "closeDatePicker": "Close",
                    "dateIsSelected": [Function],
                    "dateIsUnavailable": [Function],
                    "enterKey": "Enter key",
                    "escape": "Escape key",
                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                    "homeEnd": "Home and end keys",
                    "jumpToNextMonth": "Move forward to switch to the next month.",
                    "jumpToPrevMonth": "Move backward to switch to the previous month.",
                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                    "keyboardShortcuts": "Keyboard Shortcuts",
                    "leftArrowRightArrow": "Right and left arrow keys",
                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                    "moveFocusByOneMonth": "Switch months.",
                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                    "openThisPanel": "Open this panel.",
                    "pageUpPageDown": "page up and page down keys",
                    "questionMark": "Question mark",
                    "returnFocusToInput": "Return to the date input field.",
                    "selectFocusedDate": "Select the date in focus.",
                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                    "upArrowDownArrow": "up and down arrow keys",
                  }
                }
                placeholder="Date"
                readOnly={false}
                regular={false}
                renderCalendarInfo={null}
                renderDayContents={null}
                renderMonth={null}
                reopenPickerOnClearDate={false}
                required={false}
                screenReaderInputMessage=""
                showClearDate={false}
                showDefaultInputIcon={false}
                small={false}
                verticalHeight={null}
                verticalSpacing={22}
                weekDayFormat="dd"
                withFullScreenPortal={false}
                withPortal={false}
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "anchorDirection": "left",
                "appendToBody": false,
                "block": false,
                "calendarInfoPosition": "bottom",
                "customCloseIcon": null,
                "customInputIcon": null,
                "date": "1995-12-17T06:24:00.000Z",
                "dayAriaLabelFormat": undefined,
                "daySize": 39,
                "disableScroll": false,
                "disabled": false,
                "displayFormat": [Function],
                "enableOutsideDays": false,
                "firstDayOfWeek": null,
                "focused": false,
                "hideKeyboardShortcutsPanel": false,
                "horizontalMargin": 0,
                "id": "date",
                "initialVisibleMonth": null,
                "inputIconPosition": "before",
                "isDayBlocked": [Function],
                "isDayHighlighted": [Function],
                "isOutsideRange": [Function],
                "isRTL": false,
                "keepFocusOnInput": false,
                "keepOpenOnDateSelect": false,
                "monthFormat": "MMMM YYYY",
                "navNext": null,
                "navPrev": null,
                "noBorder": false,
                "numberOfMonths": 1,
                "onClose": [Function],
                "onDateChange": [Function],
                "onFocusChange": [Function],
                "onNextMonthClick": [Function],
                "onPrevMonthClick": [Function],
                "openDirection": "down",
                "orientation": "horizontal",
                "phrases": Object {
                  "calendarLabel": "Calendar",
                  "chooseAvailableDate": [Function],
                  "clearDate": "Clear Date",
                  "closeDatePicker": "Close",
                  "dateIsSelected": [Function],
                  "dateIsUnavailable": [Function],
                  "enterKey": "Enter key",
                  "escape": "Escape key",
                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                  "homeEnd": "Home and end keys",
                  "jumpToNextMonth": "Move forward to switch to the next month.",
                  "jumpToPrevMonth": "Move backward to switch to the previous month.",
                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                  "keyboardShortcuts": "Keyboard Shortcuts",
                  "leftArrowRightArrow": "Right and left arrow keys",
                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                  "moveFocusByOneMonth": "Switch months.",
                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                  "openThisPanel": "Open this panel.",
                  "pageUpPageDown": "page up and page down keys",
                  "questionMark": "Question mark",
                  "returnFocusToInput": "Return to the date input field.",
                  "selectFocusedDate": "Select the date in focus.",
                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                  "upArrowDownArrow": "up and down arrow keys",
                },
                "placeholder": "Date",
                "readOnly": false,
                "regular": false,
                "renderCalendarDay": undefined,
                "renderCalendarInfo": null,
                "renderDayContents": null,
                "renderMonth": null,
                "reopenPickerOnClearDate": false,
                "required": false,
                "screenReaderInputMessage": "",
                "showClearDate": false,
                "showDefaultInputIcon": false,
                "small": false,
                "transitionDuration": undefined,
                "verticalHeight": null,
                "verticalSpacing": 22,
                "weekDayFormat": "dd",
                "withFullScreenPortal": false,
                "withPortal": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <textarea
                onChange={[Function]}
                placeholder="Add note for your expense (optional)"
                value=""
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "onChange": [Function],
                "placeholder": "Add note for your expense (optional)",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "textarea",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "type": "submit",
            },
            "ref": null,
            "rendered": null,
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p>
            Please provide description and amount.
          </p>,
          <form
            onSubmit={[Function]}
          >
            <div>
              <input
                autoFocus={true}
                onChange={[Function]}
                placeholder="Description"
                type="text"
                value="rent"
              />
            </div>
            <div>
              <input
                onChange={[Function]}
                placeholder="Amount"
                type="text"
                value=""
              />
            </div>
            <div>
              <withStyles(SingleDatePicker)
                anchorDirection="left"
                appendToBody={false}
                block={false}
                calendarInfoPosition="bottom"
                customCloseIcon={null}
                customInputIcon={null}
                date={"1995-12-17T06:24:00.000Z"}
                daySize={39}
                disableScroll={false}
                disabled={false}
                displayFormat={[Function]}
                enableOutsideDays={false}
                firstDayOfWeek={null}
                focused={false}
                hideKeyboardShortcutsPanel={false}
                horizontalMargin={0}
                id="date"
                initialVisibleMonth={null}
                inputIconPosition="before"
                isDayBlocked={[Function]}
                isDayHighlighted={[Function]}
                isOutsideRange={[Function]}
                isRTL={false}
                keepFocusOnInput={false}
                keepOpenOnDateSelect={false}
                monthFormat="MMMM YYYY"
                navNext={null}
                navPrev={null}
                noBorder={false}
                numberOfMonths={1}
                onClose={[Function]}
                onDateChange={[Function]}
                onFocusChange={[Function]}
                onNextMonthClick={[Function]}
                onPrevMonthClick={[Function]}
                openDirection="down"
                orientation="horizontal"
                phrases={
                  Object {
                    "calendarLabel": "Calendar",
                    "chooseAvailableDate": [Function],
                    "clearDate": "Clear Date",
                    "closeDatePicker": "Close",
                    "dateIsSelected": [Function],
                    "dateIsUnavailable": [Function],
                    "enterKey": "Enter key",
                    "escape": "Escape key",
                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                    "homeEnd": "Home and end keys",
                    "jumpToNextMonth": "Move forward to switch to the next month.",
                    "jumpToPrevMonth": "Move backward to switch to the previous month.",
                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                    "keyboardShortcuts": "Keyboard Shortcuts",
                    "leftArrowRightArrow": "Right and left arrow keys",
                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                    "moveFocusByOneMonth": "Switch months.",
                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                    "openThisPanel": "Open this panel.",
                    "pageUpPageDown": "page up and page down keys",
                    "questionMark": "Question mark",
                    "returnFocusToInput": "Return to the date input field.",
                    "selectFocusedDate": "Select the date in focus.",
                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                    "upArrowDownArrow": "up and down arrow keys",
                  }
                }
                placeholder="Date"
                readOnly={false}
                regular={false}
                renderCalendarInfo={null}
                renderDayContents={null}
                renderMonth={null}
                reopenPickerOnClearDate={false}
                required={false}
                screenReaderInputMessage=""
                showClearDate={false}
                showDefaultInputIcon={false}
                small={false}
                verticalHeight={null}
                verticalSpacing={22}
                weekDayFormat="dd"
                withFullScreenPortal={false}
                withPortal={false}
              />
            </div>
            <div>
              <textarea
                onChange={[Function]}
                placeholder="Add note for your expense (optional)"
                value=""
              />
            </div>
            <button
              type="submit"
            />
          </form>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Please provide description and amount.",
          },
          "ref": null,
          "rendered": "Please provide description and amount.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <input
                  autoFocus={true}
                  onChange={[Function]}
                  placeholder="Description"
                  type="text"
                  value="rent"
                />
              </div>,
              <div>
                <input
                  onChange={[Function]}
                  placeholder="Amount"
                  type="text"
                  value=""
                />
              </div>,
              <div>
                <withStyles(SingleDatePicker)
                  anchorDirection="left"
                  appendToBody={false}
                  block={false}
                  calendarInfoPosition="bottom"
                  customCloseIcon={null}
                  customInputIcon={null}
                  date={"1995-12-17T06:24:00.000Z"}
                  daySize={39}
                  disableScroll={false}
                  disabled={false}
                  displayFormat={[Function]}
                  enableOutsideDays={false}
                  firstDayOfWeek={null}
                  focused={false}
                  hideKeyboardShortcutsPanel={false}
                  horizontalMargin={0}
                  id="date"
                  initialVisibleMonth={null}
                  inputIconPosition="before"
                  isDayBlocked={[Function]}
                  isDayHighlighted={[Function]}
                  isOutsideRange={[Function]}
                  isRTL={false}
                  keepFocusOnInput={false}
                  keepOpenOnDateSelect={false}
                  monthFormat="MMMM YYYY"
                  navNext={null}
                  navPrev={null}
                  noBorder={false}
                  numberOfMonths={1}
                  onClose={[Function]}
                  onDateChange={[Function]}
                  onFocusChange={[Function]}
                  onNextMonthClick={[Function]}
                  onPrevMonthClick={[Function]}
                  openDirection="down"
                  orientation="horizontal"
                  phrases={
                    Object {
                      "calendarLabel": "Calendar",
                      "chooseAvailableDate": [Function],
                      "clearDate": "Clear Date",
                      "closeDatePicker": "Close",
                      "dateIsSelected": [Function],
                      "dateIsUnavailable": [Function],
                      "enterKey": "Enter key",
                      "escape": "Escape key",
                      "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                      "homeEnd": "Home and end keys",
                      "jumpToNextMonth": "Move forward to switch to the next month.",
                      "jumpToPrevMonth": "Move backward to switch to the previous month.",
                      "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                      "keyboardShortcuts": "Keyboard Shortcuts",
                      "leftArrowRightArrow": "Right and left arrow keys",
                      "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                      "moveFocusByOneMonth": "Switch months.",
                      "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                      "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                      "openThisPanel": "Open this panel.",
                      "pageUpPageDown": "page up and page down keys",
                      "questionMark": "Question mark",
                      "returnFocusToInput": "Return to the date input field.",
                      "selectFocusedDate": "Select the date in focus.",
                      "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                      "upArrowDownArrow": "up and down arrow keys",
                    }
                  }
                  placeholder="Date"
                  readOnly={false}
                  regular={false}
                  renderCalendarInfo={null}
                  renderDayContents={null}
                  renderMonth={null}
                  reopenPickerOnClearDate={false}
                  required={false}
                  screenReaderInputMessage=""
                  showClearDate={false}
                  showDefaultInputIcon={false}
                  small={false}
                  verticalHeight={null}
                  verticalSpacing={22}
                  weekDayFormat="dd"
                  withFullScreenPortal={false}
                  withPortal={false}
                />
              </div>,
              <div>
                <textarea
                  onChange={[Function]}
                  placeholder="Add note for your expense (optional)"
                  value=""
                />
              </div>,
              <button
                type="submit"
              />,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <input
                  autoFocus={true}
                  onChange={[Function]}
                  placeholder="Description"
                  type="text"
                  value="rent"
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "autoFocus": true,
                  "onChange": [Function],
                  "placeholder": "Description",
                  "type": "text",
                  "value": "rent",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <input
                  onChange={[Function]}
                  placeholder="Amount"
                  type="text"
                  value=""
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "onChange": [Function],
                  "placeholder": "Amount",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <withStyles(SingleDatePicker)
                  anchorDirection="left"
                  appendToBody={false}
                  block={false}
                  calendarInfoPosition="bottom"
                  customCloseIcon={null}
                  customInputIcon={null}
                  date={"1995-12-17T06:24:00.000Z"}
                  daySize={39}
                  disableScroll={false}
                  disabled={false}
                  displayFormat={[Function]}
                  enableOutsideDays={false}
                  firstDayOfWeek={null}
                  focused={false}
                  hideKeyboardShortcutsPanel={false}
                  horizontalMargin={0}
                  id="date"
                  initialVisibleMonth={null}
                  inputIconPosition="before"
                  isDayBlocked={[Function]}
                  isDayHighlighted={[Function]}
                  isOutsideRange={[Function]}
                  isRTL={false}
                  keepFocusOnInput={false}
                  keepOpenOnDateSelect={false}
                  monthFormat="MMMM YYYY"
                  navNext={null}
                  navPrev={null}
                  noBorder={false}
                  numberOfMonths={1}
                  onClose={[Function]}
                  onDateChange={[Function]}
                  onFocusChange={[Function]}
                  onNextMonthClick={[Function]}
                  onPrevMonthClick={[Function]}
                  openDirection="down"
                  orientation="horizontal"
                  phrases={
                    Object {
                      "calendarLabel": "Calendar",
                      "chooseAvailableDate": [Function],
                      "clearDate": "Clear Date",
                      "closeDatePicker": "Close",
                      "dateIsSelected": [Function],
                      "dateIsUnavailable": [Function],
                      "enterKey": "Enter key",
                      "escape": "Escape key",
                      "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                      "homeEnd": "Home and end keys",
                      "jumpToNextMonth": "Move forward to switch to the next month.",
                      "jumpToPrevMonth": "Move backward to switch to the previous month.",
                      "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                      "keyboardShortcuts": "Keyboard Shortcuts",
                      "leftArrowRightArrow": "Right and left arrow keys",
                      "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                      "moveFocusByOneMonth": "Switch months.",
                      "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                      "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                      "openThisPanel": "Open this panel.",
                      "pageUpPageDown": "page up and page down keys",
                      "questionMark": "Question mark",
                      "returnFocusToInput": "Return to the date input field.",
                      "selectFocusedDate": "Select the date in focus.",
                      "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                      "upArrowDownArrow": "up and down arrow keys",
                    }
                  }
                  placeholder="Date"
                  readOnly={false}
                  regular={false}
                  renderCalendarInfo={null}
                  renderDayContents={null}
                  renderMonth={null}
                  reopenPickerOnClearDate={false}
                  required={false}
                  screenReaderInputMessage=""
                  showClearDate={false}
                  showDefaultInputIcon={false}
                  small={false}
                  verticalHeight={null}
                  verticalSpacing={22}
                  weekDayFormat="dd"
                  withFullScreenPortal={false}
                  withPortal={false}
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "anchorDirection": "left",
                  "appendToBody": false,
                  "block": false,
                  "calendarInfoPosition": "bottom",
                  "customCloseIcon": null,
                  "customInputIcon": null,
                  "date": "1995-12-17T06:24:00.000Z",
                  "dayAriaLabelFormat": undefined,
                  "daySize": 39,
                  "disableScroll": false,
                  "disabled": false,
                  "displayFormat": [Function],
                  "enableOutsideDays": false,
                  "firstDayOfWeek": null,
                  "focused": false,
                  "hideKeyboardShortcutsPanel": false,
                  "horizontalMargin": 0,
                  "id": "date",
                  "initialVisibleMonth": null,
                  "inputIconPosition": "before",
                  "isDayBlocked": [Function],
                  "isDayHighlighted": [Function],
                  "isOutsideRange": [Function],
                  "isRTL": false,
                  "keepFocusOnInput": false,
                  "keepOpenOnDateSelect": false,
                  "monthFormat": "MMMM YYYY",
                  "navNext": null,
                  "navPrev": null,
                  "noBorder": false,
                  "numberOfMonths": 1,
                  "onClose": [Function],
                  "onDateChange": [Function],
                  "onFocusChange": [Function],
                  "onNextMonthClick": [Function],
                  "onPrevMonthClick": [Function],
                  "openDirection": "down",
                  "orientation": "horizontal",
                  "phrases": Object {
                    "calendarLabel": "Calendar",
                    "chooseAvailableDate": [Function],
                    "clearDate": "Clear Date",
                    "closeDatePicker": "Close",
                    "dateIsSelected": [Function],
                    "dateIsUnavailable": [Function],
                    "enterKey": "Enter key",
                    "escape": "Escape key",
                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
                    "homeEnd": "Home and end keys",
                    "jumpToNextMonth": "Move forward to switch to the next month.",
                    "jumpToPrevMonth": "Move backward to switch to the previous month.",
                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                    "keyboardShortcuts": "Keyboard Shortcuts",
                    "leftArrowRightArrow": "Right and left arrow keys",
                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
                    "moveFocusByOneMonth": "Switch months.",
                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
                    "openThisPanel": "Open this panel.",
                    "pageUpPageDown": "page up and page down keys",
                    "questionMark": "Question mark",
                    "returnFocusToInput": "Return to the date input field.",
                    "selectFocusedDate": "Select the date in focus.",
                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
                    "upArrowDownArrow": "up and down arrow keys",
                  },
                  "placeholder": "Date",
                  "readOnly": false,
                  "regular": false,
                  "renderCalendarDay": undefined,
                  "renderCalendarInfo": null,
                  "renderDayContents": null,
                  "renderMonth": null,
                  "reopenPickerOnClearDate": false,
                  "required": false,
                  "screenReaderInputMessage": "",
                  "showClearDate": false,
                  "showDefaultInputIcon": false,
                  "small": false,
                  "transitionDuration": undefined,
                  "verticalHeight": null,
                  "verticalSpacing": 22,
                  "weekDayFormat": "dd",
                  "withFullScreenPortal": false,
                  "withPortal": false,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <textarea
                  onChange={[Function]}
                  placeholder="Add note for your expense (optional)"
                  value=""
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "onChange": [Function],
                  "placeholder": "Add note for your expense (optional)",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "textarea",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "type": "submit",
              },
              "ref": null,
              "rendered": null,
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
